Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30984

Online ALTER table is denied with non-informative error messages

    XMLWordPrintable

Details

    Description

      serg wrote elsewhere:

      Conditions under which online alter works are getting more and more complicated, lots of cases will disable online mode. Perhaps it'd make sense to issue a warning of why exactly online was disabled? Otherwise, I suspect, users will be hardly able to navigate this maze of conditions.

      So far this extra diagnostics has not been implemented, error messages still look the way they did before:

      bb-11.0-oalter fd06124e66c

      MariaDB [test]> alter online table t1 rename to t1a;
      ERROR 1845 (0A000): LOCK=NONE/SHARED is not supported for this operation. Try LOCK=EXCLUSIVE
      MariaDB [test]> show warnings;
      +-------+------+--------------------------------------------------------------------------+
      | Level | Code | Message                                                                  |
      +-------+------+--------------------------------------------------------------------------+
      | Error | 1845 | LOCK=NONE/SHARED is not supported for this operation. Try LOCK=EXCLUSIVE |
      +-------+------+--------------------------------------------------------------------------+
      1 row in set (0.000 sec)
      

      Attachments

        Issue Links

          Activity

            People

              nikitamalyavin Nikita Malyavin
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2d 5h
                  2d 5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.